# skillfindr

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/routes/: __init__.py  auth.py  health.py  matches.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  availability.py  user.py  userskill.py
backend/app/schemas/: auth.py  user.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/matches/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/sessions/[id]/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/swaps/[id]/: page.tsx
frontend/src/app/users/[id]/: page.tsx
frontend/src/app/welcome/: page.tsx
frontend/src/components/: AvailabilityEditor.tsx  MatchCard.tsx  NavGate.tsx  RatingForm.tsx  SessionScheduler.tsx  SkillPicker.tsx  SwapContractForm.tsx  TopNav.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts
frontend/src/styles/: globals.css
infra/nginx/: default.conf
scripts/: dev_create_admin.py  seed_skills.py
